<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@color/light"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation ="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_text"

                android:textColor="@color/light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_italic"/>

            <ImageView
                android:id="@+id/updateButton"
                android:layout_width="26dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/update_button_description"
                android:src="@drawable/baseline_edit_note_24" />


            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/delete_button_description"

                android:src="@drawable/baseline_delete_note_24" />

        </RelativeLayout>
        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_text"
            android:textColor="@color/light"


            android:maxLines="3"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_italic"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>