<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddNoteActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:text="@string/add_note_heading"
        android:textColor="@color/light"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_italic" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_done_24"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/addNoteHeading"
        android:contentDescription="@string/save_button_description"
        android:layout_marginEnd="6dp" />


    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/addNoteHeading"
        android:layout_marginTop="16dp"
        android:autofillHints="title"
        android:background="@drawable/navy_border"
        android:fontFamily="@font/poppins_italic"
        android:hint="@string/add_title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/light"
        android:textColorHint="@color/light"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleEditText"
        android:background="@drawable/navy_border"
        android:gravity="top"
        android:hint="@string/add_description"
        android:inputType="textMultiLine"
        android:autofillHints="description"
        android:textColorHint="@color/light"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/light"
       android:fontFamily="@font/poppins_italic"/>




</RelativeLayout>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".AddNoteActivity">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->