<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UpdateNoteActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:text="@string/edit_note_heading"
        android:textSize="24sp"
        android:textColor="@color/light"
    android:fontFamily="@font/poppins_italic"/>
      <!--  android:textColor="@color/navy"-->



    <ImageView
        android:id="@+id/updateSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_done_24"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/editNoteHeading"
        android:background="@color/navy"
        android:contentDescription="@string/save_button_description"
        android:layout_marginEnd="6dp" />

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNoteHeading"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@id/updateSaveButton"
        android:autofillHints="title"
        android:background="@drawable/navy_border"

        android:hint="@string/add_title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/light"
        android:textColorHint="@color/light"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_italic"/>

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/updateTitleEditText"
        android:background="@drawable/navy_border"
        android:textColor="@color/light"
        android:gravity="top"
        android:hint="@string/add_description"
        android:autofillHints="description"

        android:textColorHint="@color/light"
        android:padding="12dp"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_italic"/>

</RelativeLayout>
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".AddNoteActivity">-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->